# quies

./: Cargo.toml  README.md
docs/plans/: 2026-02-27-feat-http-youtube-audio-streaming-plan.md
src/: audio.rs  main.rs  ui.rs
